# ImageInformationAnalyzer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  DenoiseProcessCircleModel.cpp  DenoiseProcessCircleModel.hpp  DenoiseProcessEllipseModel.cpp  DenoiseProcessEllipseModel.hpp  DenoiseProcessEllipseModelHeavy.cpp  DenoiseProcessEllipseModelHeavy.hpp  DenoiseProcessInterface.cpp  DenoiseProcessInterface.hpp  ImageDataManager.cpp  ImageDataManager.hpp  LightDirectionSolver.cpp  LightDirectionSolver.hpp  RGBSpectrumDifferentialProcess.cpp  RGBSpectrumDifferentialProcess.hpp
src/Application/: CMakeLists.txt  DenoiseImageService.cpp  DenoiseImageService.hpp  EstimateLightDirectionService.cpp  EstimateLightDirectionService.hpp  ImageEvaluationService.cpp  ImageEvaluationService.hpp  ImageFileService.cpp  ImageFileService.hpp  ScaleImageService.cpp  ScaleImageService.hpp  TakeDifferenceService.cpp  TakeDifferenceService.hpp  TakeHistogramService.cpp  TakeHistogramService.hpp
src/Domain/: CMakeLists.txt  DenoiseImageData.cpp  DenoiseImageData.hpp  DifferentialData.cpp  DifferentialData.hpp  FloatingPointImageData.cpp  FloatingPointImageData.hpp  HistogramData.cpp  HistogramData.hpp  ImageEvaluationData.cpp  ImageEvaluationData.hpp  ImageFileData.cpp  ImageFileData.hpp  ImageUtility.cpp  ImageUtility.hpp  LightEstimationData.cpp  LightEstimationData.hpp  ScaleImageData.cpp  ScaleImageData.hpp
src/Infrastructure/: CMakeLists.txt  CircleDenoiseDataRepository.cpp  CircleDenoiseDataRepository.hpp  EachPixelSpectrumDifferentialDataRepository.cpp  EachPixelSpectrumDifferentialDataRepository.hpp  EllipseDenoiseDataRepository.cpp  EllipseDenoiseDataRepository.hpp  GraphicFileDataRepository.cpp  GraphicFileDataRepository.hpp  HyperEllipseDenoiseDataRepository.cpp  HyperEllipseDenoiseDataRepository.hpp  NormalizeScaleImageDataRepository.cpp  NormalizeScaleImageDataRepository.hpp  PSNRIImageEvaluationDataRepository.hpp  PhongModelLightDirectionDataRepository.hpp  RoundOffHistogramDataRepository.hpp  SSIMIImageEvaluationDataRepository.cpp  SSIMIImageEvaluationDataRepository.hpp  WholePixelSpectrumDifferentialDataRepository.cpp
src/Presentation/: CMakeLists.txt  ImageInformationModel.cpp  ImageInformationModel.hpp  ImageInformationPresenter.cpp  ImageInformationPresenter.hpp
src/additional/: CircleDenoiseDataRepository.cpp  CircleDenoiseDataRepository.hpp  DenoiseImageService.cpp  DenoiseImageService.hpp  EachPixelSpectrumDifferentialDataRepository.cpp  EachPixelSpectrumDifferentialDataRepository.hpp  EllipseDenoiseDataRepository.cpp  EllipseDenoiseDataRepository.hpp  EstimateLightDirectionService.cpp  EstimateLightDirectionService.hpp  FloatingPointImageData.cpp  FloatingPointImageData.hpp  GraphicFileDataRepository.cpp  GraphicFileDataRepository.hpp  HyperEllipseDenoiseDataRepository.cpp  HyperEllipseDenoiseDataRepository.hpp  ImageEvaluationService.cpp  ImageEvaluationService.hpp  ImageFileService.cpp  ImageFileService.hpp  ImageInformationModel.cpp  ImageInformationModel.hpp  ImageInformationPresenter.cpp  ImageInformationPresenter.hpp  JpegFileDataRepository.cpp  JpegFileDataRepository.hpp  NormalizeScaleImageDataRepository.cpp  NormalizeScaleImageDataRepository.hpp  PSNRIImageEvaluationDataRepository.cpp  PSNRIImageEvaluationDataRepository.hpp  PhongModelLightDirectionDataRepository.cpp  PhongModelLightDirectionDataRepository.hpp  RoundOffHistogramDataRepository.cpp  RoundOffHistogramDataRepository.hpp  SSIMIImageEvaluationDataRepository.hpp  ScaleImageService.cpp  ScaleImageService.hpp  TakeDifferenceService.cpp  TakeDifferenceService.hpp  TakeHistogramService.cpp  (+3 more)
